tests/suite/manifests/longevity/cafe-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: loggable-snippet
    backendRefs:
    - name: coffee
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tea
spec:
  parentRefs:
  - name: gateway
    sectionName: https
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /tea
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: loggable-snippet
    backendRefs:
    - name: tea
      port: 80
---
# Only log non-200 responses
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsFilter
metadata:
  name: loggable-snippet
spec:
  snippets:
  - context: http
    value: |
      map $status $loggable {
        ~^[2] 0;
        default 1;
      }
      access_log /dev/stdout combined if=$loggable;
