tests/suite/manifests/longevity/prom.yaml
apiVersion: monitoring.googleapis.com/v1
kind: PodMonitoring
metadata:
  name: prom-example
  namespace: nginx-gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-gateway-fabric
  endpoints:
  - port: metrics
    interval: 30s
